--- a/pong game/pong_game.html
+++ b/pong game/pong_game.html
@@ -39,8 +39,8 @@
 		<div id="btn">START</div>
 		</div>
 	
-	<script src="./PONG　GAME_files/jquery-1.10.1.min.js.ダウンロード"></script>
-	<script src="./PONG　GAME_files/script.js.ダウンロード"></script>
+	<script src="jquery-1.10.1.min.js"></script>
+	<script src="script.js"></script>
 
 
 </body></html>
